# cnmatrix

./: Android.mk  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  cmake_install.cmake  cnmatrix.pc  cnmatrix.pc.in
.github/workflows/: cmake.yml
cmake/: FindEigen3.cmake
include/cnmatrix/: cn_matrix.blas.h  cn_matrix.h
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cn_matrix.blas.c  cn_matrix.c  cn_matrix.eigen.cpp
src/eigen/: core.cpp  gemm.cpp  internal.h  svd.cpp
tests/: CMakeLists.txt  cn_matrixtest.c
